--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       * {
         box-sizing: border-box;
       }
+
       html,
       body {
         margin: 0;
@@ -15,26 +16,30 @@
         height: 100%;
         font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         background: #f0f4fb;
+      }
+
+      body {
         display: flex;
         justify-content: center;
-        align-items: center;
-      }
-      body {
+        align-items: stretch;
         padding: 15px;
       }
+
       #chat-container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        max-height: 100%;
         width: 100%;
         max-width: 900px;
-        height: 90vh;
         background: #fff;
         border-radius: 20px;
         box-shadow: 0 14px 28px rgba(0, 0, 0, 0.12),
           0 10px 10px rgba(0, 0, 0, 0.08);
-        display: flex;
-        flex-direction: column;
         overflow: hidden;
         border: 1px solid #ddd;
       }
+
       #chat-header {
         background: #004aad;
         color: #fff;
@@ -47,8 +52,9 @@
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
         flex-shrink: 0;
       }
+
       #messages {
-        flex-grow: 1;
+        flex: 1 1 auto;
         padding: 20px 30px 15px;
         overflow-y: auto;
         display: flex;
@@ -57,16 +63,20 @@
         background: #fff;
         scroll-behavior: smooth;
       }
+
       #messages::-webkit-scrollbar {
         width: 8px;
       }
+
       #messages::-webkit-scrollbar-thumb {
         background-color: #004aad88;
         border-radius: 4px;
       }
+
       #messages::-webkit-scrollbar-track {
         background: #f1f1f1;
       }
+
       .message-wrapper {
         display: flex;
         align-items: flex-end;
@@ -76,22 +86,26 @@
         transform: translateY(15px);
         word-break: break-word;
       }
+
       @keyframes fadeSlideUp {
         to {
           opacity: 1;
           transform: translateY(0);
         }
       }
+
       .message-wrapper.bot {
         flex-direction: row;
         justify-content: flex-start;
         margin-right: auto;
       }
+
       .message-wrapper.user {
         flex-direction: row-reverse;
         justify-content: flex-end;
         margin-left: auto;
       }
+
       .bot-avatar {
         width: 36px;
         height: 36px;
@@ -104,12 +118,14 @@
         align-items: center;
         overflow: hidden;
       }
+
       .bot-avatar img {
         width: 100%;
         height: 100%;
         object-fit: cover;
         border-radius: 50%;
       }
+
       .message {
         background: #004aad;
         color: white;
@@ -122,62 +138,28 @@
         user-select: text;
         display: inline-block;
       }
+
       .message.user {
         background: #2196f3;
         border-radius: 20px 20px 4px 20px;
         box-shadow: 0 4px 8px rgb(33 150 243 / 0.3);
       }
+
       .message a {
         color: #ffdd57;
         text-decoration: underline;
         word-break: break-word;
       }
-      #input-area {
-        display: flex;
-        padding: 15px 30px;
-        border-top: 1px solid #eee;
-        background: #fff;
-        flex-shrink: 0;
-        align-items: center;
-      }
-      #input-area input {
-        flex-grow: 1;
-        padding: 14px 20px;
-        border: 2px solid #004aad;
-        border-radius: 30px;
-        font-size: 1rem;
-        outline: none;
-        color: #222;
-      }
-      #input-area input::placeholder {
-        color: #888;
-      }
-      #input-area button {
-        background: #004aad;
-        border: none;
-        color: #fff;
-        padding: 12px;
-        margin-left: 15px;
-        border-radius: 50%;
-        font-size: 1.1rem;
-        cursor: pointer;
-        width: 44px;
-        height: 44px;
-        box-shadow: 0 4px 10px rgba(0, 74, 173, 0.3);
-        display: flex;
-        align-items: center;
-        justify-content: center;
-      }
-      #input-area button:hover {
-        background: #1e90ff;
-        box-shadow: 0 6px 15px rgba(30, 144, 255, 0.5);
-      }
+
       #quick-replies {
-        padding: 12px 40px 12px 30px;
+        flex-shrink: 0;
+        padding: 12px 30px;
         display: flex;
         flex-wrap: wrap;
         gap: 10px;
+        background: #fff;
       }
+
       .quick-btn {
         background: #004aad;
         color: white;
@@ -187,16 +169,54 @@
         font-size: 1rem;
         cursor: pointer;
         box-shadow: 0 3px 8px rgba(0, 74, 173, 0.3);
-        min-width: 130px;
       }
+
       .quick-btn:hover {
         background: #1e90ff;
         box-shadow: 0 5px 15px rgba(30, 144, 255, 0.6);
       }
 
-      /* ✅ Mobile Responsive Adjustments */
+      #input-area {
+        flex-shrink: 0;
+        display: flex;
+        padding: 15px 30px;
+        border-top: 1px solid #eee;
+        background: #fff;
+        align-items: center;
+        gap: 10px;
+      }
+
+      #input-area input {
+        flex-grow: 1;
+        padding: 14px 20px;
+        border: 2px solid #004aad;
+        border-radius: 30px;
+        font-size: 1rem;
+        outline: none;
+        color: #222;
+      }
+
+      #input-area button {
+        background: #004aad;
+        border: none;
+        color: #fff;
+        padding: 12px;
+        border-radius: 50%;
+        font-size: 1.1rem;
+        cursor: pointer;
+        width: 44px;
+        height: 44px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 0 4px 10px rgba(0, 74, 173, 0.3);
+      }
+
+      #input-area button:hover {
+        background: #1e90ff;
+      }
+
       @media (max-width: 600px) {
-        html,
         body {
           padding: 0;
         }
@@ -204,7 +224,6 @@
         #chat-container {
           border-radius: 0;
           height: 100vh;
-          max-height: none;
         }
 
         #chat-header {
@@ -222,19 +241,10 @@
 
         #input-area {
           padding: 12px 16px;
-          flex-wrap: wrap;
-          gap: 10px;
         }
 
         #input-area input {
           font-size: 0.95rem;
-          padding: 12px 16px;
-        }
-
-        #input-area button {
-          width: 42px;
-          height: 42px;
-          padding: 10px;
         }
 
         #quick-replies {
@@ -242,7 +252,6 @@
         }
 
         .quick-btn {
-          min-width: unset;
           padding: 8px 14px;
           font-size: 0.9rem;
         }
@@ -354,7 +363,7 @@
           if (!response.ok) throw new Error("Network error");
           const data = await response.json();
           return data.reply || "Sorry, I didn't get a response.";
-        } catch (err) {
+        } catch {
           return "Error: Unable to contact booking system.";
         }
       }
