--- a/index.html
+++ b/index.html
@@ -382,10 +382,13 @@
         );
         if (typingMsg) typingMsg.parentElement.remove();
 
-        addMessage(reply, "bot");
-        userInput.disabled = false;
-        userInput.focus();
-      }
+   addMessage(reply, "bot");
+userInput.disabled = false;
+
+// Prevent auto-focus on mobile devices to avoid opening keyboard
+if (!/Mobi|Android|iPhone|iPad/i.test(navigator.userAgent)) {
+  userInput.focus();
+}
 
       form.addEventListener("submit", (e) => {
         e.preventDefault();
